--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-15 15:28-0500\n"
+"POT-Creation-Date: 2017-11-15 16:57-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,6 +20,10 @@ msgstr ""
 #: .\api\templates\base.html:27
 msgid "Title"
 msgstr ""
+
+#: .\api\views\actors.py:305
+msgid "fooo"
+msgstr "bar EN"
 
 #: .\linkupapi\settings.py:121
 msgid "Spanish"
