--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-15 16:57-0500\n"
+"POT-Creation-Date: 2017-11-17 11:25-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,22 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: .\api\models.py:157
+msgid "Natural"
+msgstr "Natural ES"
+
+#: .\api\models.py:158
+msgid "Bussiness"
+msgstr "Bussiness ES"
+
+#: .\api\models.py:167
+msgid "Natural2"
+msgstr "Natural2 ES"
+
+#: .\api\models.py:168
+msgid "Bussiness2"
+msgstr "Bussiness2 ES"
+
 #: .\api\templates\base.html:27
 msgid "Title"
 msgstr "Titulo"
@@ -26,10 +42,10 @@ msgstr "Titulo"
 msgid "fooo"
 msgstr "bar ES"
 
-#: .\linkupapi\settings.py:121
+#: .\linkupapi\settings.py:120
 msgid "Spanish"
 msgstr "Español"
 
-#: .\linkupapi\settings.py:122
+#: .\linkupapi\settings.py:121
 msgid "English"
 msgstr "Ingles"
