prueba de categori

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -37,6 +37,11 @@ msgstr "Bussiness2 EN"
 msgid "Title"
 msgstr ""
 
+#categorias o especialidades
+msgid "Derecho Tributario"
+msgstr "Tax Law"
+
+
 #: .\api\views\actors.py:305
 msgid "fooo"
 msgstr "bar EN"
