--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -214,9 +214,68 @@ msgstr ""
 msgid "Title"
 msgstr ""
 
-#categorias o especialidades
+#Level Instruccion
+msgid "No level"
+msgstr "No level"
 
+msgid "Initial"
+msgstr "Initial"
 
+msgid "Primary"
+msgstr "Primary"
+
+msgid "High school"
+msgstr "High school"
+
+msgid "Basic special"
+msgstr "Basic special"
+
+msgid "Superior non-university incomplete"
+msgstr "Superior non-university incomplete"
+
+msgid "Superior non-university full"
+msgstr "Superior non-university full"
+
+msgid "Incomplete university superior"
+msgstr "Incomplete university superior"
+
+msgid "Full university superior"
+msgstr "Full university superior"
+
+msgid "master's degree"
+msgstr "master's degree"
+
+msgid "Doctorate"
+msgstr "Doctorate"
+
+# Economic Sector
+
+msgid "Farming"
+msgstr "Farming"
+
+msgid "Fishing"
+msgstr "Fishing"
+
+msgid "Mining"
+msgstr "Mining"
+
+msgid "Hydrocarbons"
+msgstr "Hydrocarbons"
+
+msgid "Manufacture"
+msgstr "Manufacture"
+
+msgid "Electricity and Water"
+msgstr "Electricity and Water"
+
+msgid "Building"
+msgstr "Building"
+
+msgid "Commerce"
+msgstr "Commerce"
+
+msgid "Services"
+msgstr "Services"
 
 #: .\api\views\actors.py:305
 msgid "fooo"
