internacionalizacion countries finalizado

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -39,39 +39,39 @@ msgstr "Business"
 
 #: .\api\api_choices_models.py:27
 msgid "Male"
-msgstr ""
+msgstr "Male"
 
 #: .\api\api_choices_models.py:28
 msgid "Female"
-msgstr ""
+msgstr "Female"
 
 #: .\api\api_choices_models.py:31
 msgid "cohabiting"
-msgstr ""
+msgstr "Cohabiting"
 
 #: .\api\api_choices_models.py:32
 msgid "separated"
-msgstr ""
+msgstr "Separated"
 
 #: .\api\api_choices_models.py:33
 msgid "married"
-msgstr ""
+msgstr "Married"
 
 #: .\api\api_choices_models.py:34
 msgid "widower"
-msgstr ""
+msgstr "Widower"
 
 #: .\api\api_choices_models.py:35
 msgid "divorced"
-msgstr ""
+msgstr "Divorced"
 
 #: .\api\api_choices_models.py:36
 msgid "single"
-msgstr ""
+msgstr "Single"
 
 #: .\api\api_choices_models.py:40
 msgid "Employer"
-msgstr ""
+msgstr "Employer"
 
 #: .\api\api_choices_models.py:41
 msgid "Independent worker"
@@ -276,6 +276,502 @@ msgstr "Commerce"
 
 msgid "Services"
 msgstr "Services"
+
+# -- Countries  ---
+
+
+msgid "Afghanistan"
+msgstr ""
+msgid "Albania"
+msgstr ""
+msgid "Germany"
+msgstr ""
+msgid "Algeria"
+msgstr ""
+msgid "Andorra"
+msgstr ""
+msgid "Angola"
+msgstr ""
+msgid "Anguilla"
+msgstr ""
+msgid "Antarctica"
+msgstr ""
+msgid "Antigua and Barbuda"
+msgstr ""
+msgid "Netherlands Antilles"
+msgstr ""
+msgid "Saudi Arabia"
+msgstr ""
+msgid "Argentina"
+msgstr ""
+msgid "Armenia"
+msgstr ""
+msgid "Aruba"
+msgstr ""
+msgid "Australia"
+msgstr ""
+msgid "Austria"
+msgstr ""
+msgid "Azerbaijan"
+msgstr ""
+msgid "Belgium"
+msgstr ""
+msgid "Bahamas"
+msgstr ""
+msgid "Bahrain"
+msgstr ""
+msgid "Bangladesh"
+msgstr ""
+msgid "Barbados"
+msgstr ""
+msgid "Belize"
+msgstr ""
+msgid "Benin"
+msgstr ""
+msgid "Bhutan"
+msgstr ""
+msgid "Belarus"
+msgstr ""
+msgid "Myanmar"
+msgstr ""
+msgid "Bolivia"
+msgstr ""
+msgid "Bosnia and Herzegovina"
+msgstr ""
+msgid "Botswana"
+msgstr ""
+msgid "Brazil"
+msgstr ""
+msgid "Brunei"
+msgstr ""
+msgid "Bulgaria"
+msgstr ""
+msgid "Burkina Faso"
+msgstr ""
+msgid "Burundi"
+msgstr ""
+msgid "Cape Verde"
+msgstr ""
+msgid "Cambodia"
+msgstr ""
+msgid "Cameroon"
+msgstr ""
+msgid "Canada"
+msgstr ""
+msgid "Chad"
+msgstr ""
+msgid "Chile"
+msgstr ""
+msgid "China"
+msgstr ""
+msgid "Cyprus"
+msgstr ""
+msgid "Vatican City State"
+msgstr ""
+msgid "Colombia"
+msgstr ""
+msgid "Comoros"
+msgstr ""
+msgid "Congo"
+msgstr ""
+msgid "Democratic Republic of the Congo"
+msgstr ""
+msgid "North Korea"
+msgstr ""
+msgid "South Korea"
+msgstr ""
+msgid "Ivory Coast"
+msgstr ""
+msgid "Costa Rica"
+msgstr ""
+msgid "Croatia"
+msgstr ""
+msgid "Cuba"
+msgstr ""
+msgid "Denmark"
+msgstr ""
+msgid "Dominica"
+msgstr ""
+msgid "Ecuador"
+msgstr ""
+msgid "Egypt"
+msgstr ""
+msgid "El Salvador"
+msgstr ""
+msgid "United Arab Emirates"
+msgstr ""
+msgid "Eritrea"
+msgstr ""
+msgid "Slovakia"
+msgstr ""
+msgid "Slovenia"
+msgstr ""
+msgid "Spain"
+msgstr ""
+msgid "United States of America"
+msgstr ""
+msgid "Estonia"
+msgstr ""
+msgid "Ethiopia"
+msgstr ""
+msgid "Philippines"
+msgstr ""
+msgid "Finland"
+msgstr ""
+msgid "Fiji"
+msgstr ""
+msgid "France"
+msgstr ""
+msgid "Gabon"
+msgstr ""
+msgid "Gambia"
+msgstr ""
+msgid "Georgia"
+msgstr ""
+msgid "Ghana"
+msgstr ""
+msgid "Gibraltar"
+msgstr ""
+msgid "Grenada"
+msgstr ""
+msgid "Greece"
+msgstr ""
+msgid "Greenland"
+msgstr ""
+msgid "Guadeloupe"
+msgstr ""
+msgid "Guam"
+msgstr ""
+msgid "Guatemala"
+msgstr ""
+msgid "French Guiana"
+msgstr ""
+msgid "Guernsey"
+msgstr ""
+msgid "Guinea"
+msgstr ""
+msgid "Equatorial Guinea"
+msgstr ""
+msgid "Guinea-Bissau"
+msgstr ""
+msgid "Guyana"
+msgstr ""
+msgid "Haiti"
+msgstr ""
+msgid "Honduras"
+msgstr ""
+msgid "Hong Kong"
+msgstr ""
+msgid "Hungary"
+msgstr ""
+msgid "India"
+msgstr ""
+msgid "Indonesia"
+msgstr ""
+msgid "Iran"
+msgstr ""
+msgid "Iraq"
+msgstr ""
+msgid "Ireland"
+msgstr ""
+msgid "Bouvet Island"
+msgstr ""
+msgid "Isle of Man"
+msgstr ""
+msgid "Christmas Island"
+msgstr ""
+msgid "Norfolk Island"
+msgstr ""
+msgid "Iceland"
+msgstr ""
+msgid "Bermuda Islands"
+msgstr ""
+msgid "Cayman Islands"
+msgstr ""
+msgid "Cocos (Keeling) Islands"
+msgstr ""
+msgid "Cook Islands"
+msgstr ""
+msgid "Åland Islands"
+msgstr ""
+msgid "Faroe Islands"
+msgstr ""
+msgid "South Georgia and the South Sandwich Islands"
+msgstr ""
+msgid "Heard Island and McDonald Islands"
+msgstr ""
+msgid "Maldives"
+msgstr ""
+msgid "Falkland Islands (Malvinas)"
+msgstr ""
+msgid "Northern Mariana Islands"
+msgstr ""
+msgid "Marshall Islands"
+msgstr ""
+msgid "Pitcairn Islands"
+msgstr ""
+msgid "Solomon Islands"
+msgstr ""
+msgid "Turks and Caicos Islands"
+msgstr ""
+msgid "United States Minor Outlying Islands"
+msgstr ""
+msgid "Virgin Islands"
+msgstr ""
+msgid "United States Virgin Islands"
+msgstr ""
+msgid "Israel"
+msgstr ""
+msgid "Italy"
+msgstr ""
+msgid "Jamaica"
+msgstr ""
+msgid "Japan"
+msgstr ""
+msgid "Jersey"
+msgstr ""
+msgid "Jordan"
+msgstr ""
+msgid "Kazakhstan"
+msgstr ""
+msgid "Kenya"
+msgstr ""
+msgid "Kyrgyzstan"
+msgstr ""
+msgid "Kiribati"
+msgstr ""
+msgid "Kuwait"
+msgstr ""
+msgid "Lebanon"
+msgstr ""
+msgid "Laos"
+msgstr ""
+msgid "Lesotho"
+msgstr ""
+msgid "Latvia"
+msgstr ""
+msgid "Liberia"
+msgstr ""
+msgid "Libya"
+msgstr ""
+msgid "Liechtenstein"
+msgstr ""
+msgid "Lithuania"
+msgstr ""
+msgid "Luxembourg"
+msgstr ""
+msgid "Mexico"
+msgstr ""
+msgid "Monaco"
+msgstr ""
+msgid "Macao"
+msgstr ""
+msgid "Macedonia"
+msgstr ""
+msgid "Madagascar"
+msgstr ""
+msgid "Malaysia"
+msgstr ""
+msgid "Malawi"
+msgstr ""
+msgid "Mali"
+msgstr ""
+msgid "Malta"
+msgstr ""
+msgid "Morocco"
+msgstr ""
+msgid "Martinique"
+msgstr ""
+msgid "Mauritius"
+msgstr ""
+msgid "Mauritania"
+msgstr ""
+msgid "Mayotte"
+msgstr ""
+msgid "Federated States of Micronesia"
+msgstr ""
+msgid "Moldova"
+msgstr ""
+msgid "Mongolia"
+msgstr ""
+msgid "Montenegro"
+msgstr ""
+msgid "Montserrat"
+msgstr ""
+msgid "Mozambique"
+msgstr ""
+msgid "Namibia"
+msgstr ""
+msgid "Nauru"
+msgstr ""
+msgid "Nepal"
+msgstr ""
+msgid "Nicaragua"
+msgstr ""
+msgid "Niger"
+msgstr ""
+msgid "Nigeria"
+msgstr ""
+msgid "Niue"
+msgstr ""
+msgid "Norway"
+msgstr ""
+msgid "New Caledonia"
+msgstr ""
+msgid "New Zealand"
+msgstr ""
+msgid "Oman"
+msgstr ""
+msgid "Netherlands"
+msgstr ""
+msgid "Pakistan"
+msgstr ""
+msgid "Palau"
+msgstr ""
+msgid "Palestine"
+msgstr ""
+msgid "Panama"
+msgstr ""
+msgid "Papua New Guinea"
+msgstr ""
+msgid "Paraguay"
+msgstr ""
+msgid "French Polynesia"
+msgstr ""
+msgid "Poland"
+msgstr ""
+msgid "Portugal"
+msgstr ""
+msgid "Puerto Rico"
+msgstr ""
+msgid "Qatar"
+msgstr ""
+msgid "United Kingdom"
+msgstr ""
+msgid "Central African Republic"
+msgstr ""
+msgid "Czech Republic"
+msgstr ""
+msgid "Dominican Republic"
+msgstr ""
+msgid "Réunion"
+msgstr ""
+msgid "Rwanda"
+msgstr ""
+msgid "Romania"
+msgstr ""
+msgid "Russia"
+msgstr ""
+msgid "Western Sahara"
+msgstr ""
+msgid "Samoa"
+msgstr ""
+msgid "American Samoa"
+msgstr ""
+msgid "Saint Barthélemy"
+msgstr ""
+msgid "Saint Kitts and Nevis"
+msgstr ""
+msgid "San Marino"
+msgstr ""
+msgid "Saint Martin (French part)"
+msgstr ""
+msgid "Saint Pierre and Miquelon"
+msgstr ""
+msgid "Saint Vincent and the Grenadines"
+msgstr ""
+msgid "Ascensión y Tristán de Acuña"
+msgstr ""
+msgid "Saint Lucia"
+msgstr ""
+msgid "Sao Tome and Principe"
+msgstr ""
+msgid "Senegal"
+msgstr ""
+msgid "Serbia"
+msgstr ""
+msgid "Seychelles"
+msgstr ""
+msgid "Sierra Leone"
+msgstr ""
+msgid "Singapore"
+msgstr ""
+msgid "Syria"
+msgstr ""
+msgid "Somalia"
+msgstr ""
+msgid "Sri Lanka"
+msgstr ""
+msgid "South Africa"
+msgstr ""
+msgid "Sudan"
+msgstr ""
+msgid "Sweden"
+msgstr ""
+msgid "Switzerland"
+msgstr ""
+msgid "Suriname"
+msgstr ""
+msgid "Svalbard and Jan Mayen"
+msgstr ""
+msgid "Swaziland"
+msgstr ""
+msgid "Tajikistan"
+msgstr ""
+msgid "Thailand"
+msgstr ""
+msgid "Taiwan"
+msgstr ""
+msgid "Tanzania"
+msgstr ""
+msgid "British Indian Ocean Territory"
+msgstr ""
+msgid "French Southern Territories"
+msgstr ""
+msgid "East Timor"
+msgstr ""
+msgid "Togo"
+msgstr ""
+msgid "Tokelau"
+msgstr ""
+msgid "Tonga"
+msgstr ""
+msgid "Trinidad and Tobago"
+msgstr ""
+msgid "Tunisia"
+msgstr ""
+msgid "Turkmenistan"
+msgstr ""
+msgid "Turkey"
+msgstr ""
+msgid "Tuvalu"
+msgstr ""
+msgid "Ukraine"
+msgstr ""
+msgid "Uganda"
+msgstr ""
+msgid "Uruguay"
+msgstr ""
+msgid "Uzbekistan"
+msgstr ""
+msgid "Vanuatu"
+msgstr ""
+msgid "Venezuela"
+msgstr ""
+msgid "Vietnam"
+msgstr ""
+msgid "Wallis and Futuna"
+msgstr ""
+msgid "Yemen"
+msgstr ""
+msgid "Djibouti"
+msgstr ""
+msgid "Zambia"
+msgstr ""
+msgid "Zimbabwe"
+msgstr ""
+
+
 
 #: .\api\views\actors.py:305
 msgid "fooo"
