actores finalizados en traducciones

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -214,6 +214,12 @@ msgstr ""
 msgid "Title"
 msgstr ""
 
+msgid "required"
+msgstr "required"
+
+msgid "must no be empty"
+msgstr "must no be empty"
+
 #Level Instruccion
 msgid "No level"
 msgstr "No level"
@@ -278,8 +284,6 @@ msgid "Services"
 msgstr "Services"
 
 # -- Countries  ---
-
-
 msgid "Afghanistan"
 msgstr ""
 msgid "Albania"
